Добавлен Css Шаблона Добавлена культура и ресурсы

--- a/TopSkillsWeb/appsettings.json
+++ b/TopSkillsWeb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Prodaction": "Data Source=srv-test02;Initial catalog=SMT_MerchSol; User Id=LoyaltyPeak;Password=loyaltypeak"
+    "production": "Data Source=srv-test02;Initial catalog=SMT_MerchSol; User Id=LoyaltyPeak;Password=loyaltypeak"
   }
 }
