1. Добавлены миграции 2. Доделаны модельки 3. Реализована смена аватарки

--- a/TopSkillsWeb/appsettings.json
+++ b/TopSkillsWeb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "production": "Data Source=srv-test02;Initial catalog=SMT_MerchSol; User Id=LoyaltyPeak;Password=loyaltypeak"
+    "production": "Data Source=JS;Initial catalog=SchoolBase; User Id=TopSkill;Password=web1523454; Trust Server Certificate=true"
   }
 }
