Изменил модель полсещений (убрал bool IsPresent, так как возможна причина отсутсвие студента) Добавлен список занятий  на сегодня

--- a/TopSkillsWeb/TopSkillsWeb.csproj
+++ b/TopSkillsWeb/TopSkillsWeb.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <Folder Include="Views\Shared\Components\CultureSwitcher\" />
+    <Folder Include="wwwroot\css\Новая папка\" />
   </ItemGroup>
 
   <ItemGroup>
