--- a/TopSkillsWeb/Properties/launchSettings.json
+++ b/TopSkillsWeb/Properties/launchSettings.json
@@ -23,7 +23,8 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "nativeDebugging": false
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
