Добавлены таблицы для разграничения доступов. Добавлен дашборд закончившихся абонементов. Исправление отображения посещений в календаре.

--- a/TopSkillsWeb/TopSkillsWeb.csproj
+++ b/TopSkillsWeb/TopSkillsWeb.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <Folder Include="Views\Shared\Components\CultureSwitcher\" />
+    <Folder Include="Views\Accesses\" />
     <Folder Include="wwwroot\css\Новая папка\" />
   </ItemGroup>
 
