Добавлен лог в файл

--- a/TopSkillsWeb/appsettings.json
+++ b/TopSkillsWeb/appsettings.json
@@ -1,12 +1,13 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Error",
       "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "production": "Data Source=JS;Initial catalog=SchoolBase; User Id=TopSkill;Password=web1523454; Trust Server Certificate=true"
+    "local": "Data Source=JS;Initial catalog=SchoolBase; User Id=TopSkill;Password=web1523454; Trust Server Certificate=true",
+    "production": "Data Source=192.168.0.206;Initial catalog=SchoolBase; User Id=TopSkill;Password=t8OaaFBA; Trust Server Certificate=true"
   }
 }
