--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -19,6 +19,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="NLog" Version="5.3.3" />
     <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="8.102.0" />
   </ItemGroup>
 
