--- a/TopSkillsWeb/TopSkillsWeb.csproj
+++ b/TopSkillsWeb/TopSkillsWeb.csproj
@@ -22,6 +22,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="NLog" Version="5.3.3" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.12" />
     <PackageReference Include="UAParser" Version="3.1.47" />
   </ItemGroup>
 
