Добавлен функционал отслеживания списания посещений, так же добавлена новогодняя тема

--- a/TopSkillsWeb/appsettings.json
+++ b/TopSkillsWeb/appsettings.json
@@ -9,5 +9,80 @@
   "ConnectionStrings": {
     "local": "Data Source=JS;Initial catalog=SchoolBase; User Id=TopSkill;Password=web1523454; Trust Server Certificate=true",
     "production": "Data Source=192.168.0.206;Initial catalog=SchoolBase; User Id=TopSkill;Password=t8OaaFBA; Trust Server Certificate=true"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "System": "Warning",
+        "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/app-.log",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 30,
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}{NewLine}",
+          "shared": true
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/json-.json",
+          "rollingInterval": "Day",
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog",
+          "retainedFileCountLimit": 7
+        }
+      },
+      {
+        "Name": "Async",
+        "Args": {
+          "configure": [
+            {
+              "Name": "File",
+              "Args": {
+                "path": "Logs/errors-.log",
+                "rollingInterval": "Day",
+                "restrictedToMinimumLevel": "Error",
+                "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}{NewLine}"
+              }
+            }
+          ]
+        }
+      },
+      {
+        "Name": "Async",
+        "Args": {
+          "configure": [
+            {
+              "Name": "RedisStreams",
+              "Args": {
+                "redisConfiguration": "192.168.0.206:6379",
+                "streamName": "schoolbase-logs",
+                "batchSize": 20,
+                "period": "00:00:02",
+                "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
+              }
+            }
+          ]
+        }
+      }
+    ],
+    "Properties": {
+      "Application": "TopSkillWeb"
+    }
   }
 }
